--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gs-clock",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
@@ -20,10 +20,26 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/android-full-screen": "^4.20.0",
+    "@ionic-native/brightness": "^4.20.0",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/insomnia": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic-native/vibration": "^4.20.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-brightness": "^0.2.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-fullscreen": "^1.2.0",
+    "cordova-plugin-insomnia": "^4.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^3.3.0",
+    "hammerjs": "^2.0.8",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -34,5 +50,24 @@
     "@ionic/app-scripts": "3.2.2",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-fullscreen": {},
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-brightness": {},
+      "cordova-sqlite-storage": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
